--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FireWorks</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/jquery.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/FiewWorks/css/style.css">
+  <script src="/FiewWorks/js/jquery.min.js" type="text/javascript"></script>
   <script>
     var shouci = true;
     console.log(shouci);
@@ -27,7 +27,7 @@
   <img id="music_ico" onclick="" alt="" style=" display: inline; float: right;  ">
 
   <audio id="audioDom"
-    src="./videos/MotDoi-14CasperBonNghiem.mp3"
+    src="/FiewWorks/videos/MotDoi-14CasperBonNghiem.mp3"
     preload="auto" loop="loop"></audio>
   <!-- loop="loop"-->
   <!-- partial:index.partial.html -->
@@ -168,11 +168,11 @@
     </div>
   </div>
 
-  <script src='./js/fscreen@1.0.1.js'></script>
-  <script src='./js/Stage@0.1.4.js'></script>
-  <script src='./js/MyMath.js'></script>
-  <script src='./js/game2.js'></script>
-  <script src="./js/script.js"></script>
+  <script src='/FiewWorks/js/fscreen@1.0.1.js'></script>
+  <script src='/FiewWorks/js/Stage@0.1.4.js'></script>
+  <script src='/FiewWorks/js/MyMath.js'></script>
+  <script src='/FiewWorks/js/game2.js'></script>
+  <script src="/FiewWorks/js/script.js"></script>
 
   <script>
     function musicPlay(isPlay) {
