--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FireWorks</title>
+  <link rel="alternate icon" type="image/png" href="/FiewWorks/favicon.png">
   <link rel="stylesheet" href="/FiewWorks/css/style.css">
   <script src="/FiewWorks/js/jquery.min.js" type="text/javascript"></script>
   <script>
