--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 
     function start() {
       let str = `Vì yêu em, anh chẳng ngại đường dài phía trước.<br>
-       Là ngày bên em,<br>
-       những con phố có hoa bay bao sắc màu Những quan vương chẳng còn buồn,<br>
-       và những khúc ca sẽ thêm màu yêu thương Ngày hôm nay,<br> đôi ta mãi sẽ là của nhau...`
+       Là ngày bên em,<br>những con phố có hoa bay bao sắc màu.<br>
+       Những quan vương chẳng còn buồn, và những khúc ca sẽ thêm màu yêu thương.<br>
+       Ngày hôm nay, đôi ta mãi sẽ là của nhau...`
       let str_ = ''
       let i = 0
       let content = document.getElementById('contents')
