--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     function start() {
       let str = `Vì yêu em, anh chẳng ngại đường dài phía trước.<br>
-       Là ngày bên em,<br>những con phố có hoa bay bao sắc màu.<br>
+       Là ngày bên em, những con phố có hoa bay bao sắc màu.<br>
        Những quan vương chẳng còn buồn, và những khúc ca sẽ thêm màu yêu thương.<br>
        Ngày hôm nay, đôi ta mãi sẽ là của nhau...`
       let str_ = ''
