--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img id="music_ico" onclick="" alt="" style=" display: inline; float: right;  ">
 
   <audio id="audioDom"
-    src="/FiewWorks/video/MotDoi-14CasperBonNghiem.mp3"
+    src="/FireWorks/video/MotDoi-14CasperBonNghiem.mp3"
     preload="auto" loop="loop"></audio>
   <!-- loop="loop"-->
   <!-- partial:index.partial.html -->
@@ -169,11 +169,11 @@
     </div>
   </div>
 
-  <script src='/FiewWorks/js/fscreen@1.0.1.js'></script>
-  <script src='/FiewWorks/js/Stage@0.1.4.js'></script>
-  <script src='/FiewWorks/js/MyMath.js'></script>
-  <script src='/FiewWorks/js/game2.js'></script>
-  <script src="/FiewWorks/js/script.js"></script>
+  <script src='/FireWorks/js/fscreen@1.0.1.js'></script>
+  <script src='/FireWorks/js/Stage@0.1.4.js'></script>
+  <script src='/FireWorks/js/MyMath.js'></script>
+  <script src='/FireWorks/js/game2.js'></script>
+  <script src="/FireWorks/js/script.js"></script>
 
   <script>
     function musicPlay(isPlay) {
